[project]
name = "bitsets"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Ordered subsets over a predefined domain"
keywords = ["ordered set", "finite", "immutable", "bit string", "array", "map", "field"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/bitsets"
Documentation = "https://bitsets.readthedocs.io"
Changelog = "https://bitsets.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/bitsets/issues"
CI = "https://github.com/xflr6/bitsets/actions"
Coverage = "https://app.codecov.io/gh/xflr6/bitsets"

[project.optional-dependencies]
visualization = ["graphviz~=0.7"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "bitsets.__version__" }

[dependency-groups]
dev = [  # $ pip install -e .[visualization] --group dev
  "build",
  "tox",
  "wheel",
  "twine",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme"
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]
test = [
  "coverage",
  "pytest>=7",
  "pytest-cov",
]
typing = [
  "mypy",
]

[tool.mypy]
packages = ["bitsets"]

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "docs", "bitsets", "tests"]
addopts = [
  "--doctest-glob=*.rst",
  "--doctest-modules", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["bitsets"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
extras = ["visualization"]
dependency_groups = ["test"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
