[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.4
testpaths = README.rst docs bitsets tests
addopts =
  --doctest-modules --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = bitsets
branch = false

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox
