[metadata]
license_files = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  README.rst
  docs
  bitsets
  tests
addopts =
  --doctest-glob='*.rst'
  --doctest-modules  --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = bitsets
branch = false

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox
